plain Java