@@ -1,8 +1,8 @@
 package sudoku;
 
-import io.vavr.Value;
-import io.vavr.collection.*;
-import io.vavr.control.Validation;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 
 public class Validator {
@@ -14,65 +14,83 @@ public class Validator {
     public static final String errorInvalidColumn = "Invalid set of numbers in column ";
     public static final String errorInvalidBlock = "Invalid set of numbers in block ";
 
-    private static final Set<Numbers> fullSet = HashSet.of(Numbers.values());
-    private static final List<Integer> list0to8 = Stream.from(0).take(Sudoku.size).toList();
+    private static final Set<Numbers> fullSet = new HashSet<>(List.of(Numbers.values()));
+    private static final List<Integer> list0to8 = IntStream.range(0, Sudoku.size).boxed().collect(Collectors.toList());
 
-    public static List<String> validate(List<String> csv) {
-        if (csv.size() < Sudoku.size)
-            return List.of(errorLessThan9Lines);
-        else {
-            return parseStructure(csv).fold(Value::toList, Validator::validateSudoku);
+    private final List<String> errors = new ArrayList<>();
+
+    public List<String> validate(List<String> csv) {
+        if (csv.size() < Sudoku.size) {
+            errors.add(errorLessThan9Lines);
+        } else {
+            parseStructure(csv).ifPresent(this::validateSudoku);
+        }
+        return errors;
+    }
+
+    Optional<Numbers[][]> parseStructure(List<String> lines) {
+        List<Numbers[]> parsedRows = new ArrayList<>();
+        for (String line : lines) {
+            parseLine(line).ifPresent(parsedRows::add);
+        }
+
+        if (parsedRows.size() == Sudoku.size)
+            return Optional.of(parsedRows.toArray(Numbers[][]::new));
+        else
+            return Optional.empty();
+    }
+
+    private Optional<Numbers[]> parseLine(String line) {
+        String[] cells = line.split(",");
+        if (cells.length != Sudoku.size) {
+            errors.add(errorLineNot9Columns + line);
+            return Optional.empty();
+        } else {
+           return parseCells(cells);
         }
     }
 
-    static Validation<Seq<String>, Numbers[][]> parseStructure(List<String> lines) {
-        return Validation.traverse(lines, Validator::parseLine).map(a -> a.toJavaArray(Numbers[][]::new));
-    }
+    private Optional<Numbers[]> parseCells(String[] cells) {
+        List<Numbers> parsedNumbers = new ArrayList<>();
+        for (String cell : cells) {
+            Numbers.fromString(cell).ifPresentOrElse(parsedNumbers::add, () -> errors.add(errorInvalidNumber + cell));
+        }
 
-    private static Validation<Seq<String>, Numbers[]> parseLine(String line) {
-        String[] cells = line.split(",");
-        if (cells.length != Sudoku.size)
-            return Validation.invalid(List.of(errorLineNot9Columns + line));
+        if (parsedNumbers.size() == Sudoku.size)
+            return Optional.of(parsedNumbers.toArray(Numbers[]::new));
         else
-            return Validation.traverse(List.of(cells), Validator::parseCell).map(a -> a.toJavaArray(Numbers[]::new));
+            return Optional.empty();
     }
 
-    private static Validation<Seq<String>, Numbers> parseCell(String cell) {
-        return Numbers.fromString(cell).fold(
-                () -> Validation.invalid(List.of(errorInvalidNumber + cell)),
-                Validation::valid
-        );
-    }
-
-    static List<String> validateSudoku(Numbers[][] grid) {
+    private void validateSudoku(Numbers[][] grid) {
         Sudoku sudoku = new Sudoku(grid);
-        var rowErrors = list0to8.flatMap(i -> validateRow(sudoku, i));
-        var columnErrors = list0to8.flatMap(i -> validateColumn(sudoku, i));
-        var blockErrors = list0to8.flatMap(i -> validateBlock(sudoku, i));
-        return rowErrors.appendAll(columnErrors).appendAll(blockErrors);
+
+        list0to8.forEach(i -> validateRow(sudoku, i));
+        list0to8.forEach(i -> validateColumn(sudoku, i));
+        list0to8.forEach(i -> validateBlock(sudoku, i));
     }
 
-    private static List<String> validateRow(Sudoku sudoku, int row) {
-        if (sudoku.getRow(row).toSet().equals(fullSet))
-            return List.empty();
-        else
-            return List.of(errorInvalidRow + (row+1));
+    private void validateRow(Sudoku sudoku, int row) {
+        Set<Numbers> numbers = new HashSet<>(sudoku.getRow(row));
+
+        if (!numbers.equals(fullSet))
+            errors.add(errorInvalidRow + (row+1));
     }
 
-    private static List<String> validateColumn(Sudoku sudoku, int col) {
-        if (sudoku.getColumn(col).toSet().equals(fullSet))
-            return List.empty();
-        else
-            return List.of(errorInvalidColumn + (col+1));
+    private void validateColumn(Sudoku sudoku, int col) {
+        Set<Numbers> numbers = new HashSet<>(sudoku.getColumn(col));
+
+        if (!numbers.equals(fullSet))
+            errors.add(errorInvalidColumn + (col+1));
     }
 
-    private static List<String> validateBlock(Sudoku sudoku, int block) {
+    private void validateBlock(Sudoku sudoku, int block) {
         int row = block / 3;
         int col = block % 3;
-        if (sudoku.getBlock(row, col).toSet().equals(fullSet))
-            return List.empty();
-        else
-            return List.of(errorInvalidBlock + (block+1));
+        Set<Numbers> numbers = new HashSet<>(sudoku.getBlock(row, col));
+
+        if (!numbers.equals(fullSet))
+            errors.add(errorInvalidBlock + (block+1));
     }
 
 }
